# cypher-dto

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  coverage.sh  doc.sh  fix.sh  reset-test-database.sh  test-fast.sh  test-isolated.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: company.rs  lib.rs  person.rs  worked_at.rs  works_at.rs
example/tests/: basic_crud.rs  manual_queries.rs
example/tests/common/: container.rs  mod.rs
lib/: Cargo.toml  README.md  coverage.sh
lib/include/: create_query.rs  id.rs  id_inferred.rs  id_multi.rs  read_query.rs  relationships.rs  rename.rs  static_strings.rs
lib/include/exec/: create_and_read_node.rs  create_and_read_relation.rs
lib/src/: entity.rs  error.rs  format.rs  lib.rs  node.rs  relationship.rs  stamps.rs
lib/tests/: basic_crud.rs  manual_queries.rs
lib/tests/common/: mod.rs
lib/tests/common/fixtures/: company.rs  mod.rs  person.rs  worked_at.rs  works_at.rs
macros/: Cargo.toml  README.md
macros/src/: derive.rs  lib.rs  node_relation.rs  stamps.rs  timestamps.rs
macros/src/derive/: entity.rs  node.rs  relation.rs
macros/src/derive/entity/: builder.rs  field.rs  fields.rs  new_and_getters.rs
macros/src/derive/entity/field/: field_type.rs  map_helper.rs  query_helper.rs
