[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
cypher-dto = { path = "../lib" }
neo4rs = "0.7.0"

[dev-dependencies]
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
neo4j_testcontainers = "0.1.0"
pretty_env_logger = "0.5.0"
testcontainers = "0.14.0"
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ["v4"] }
