[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
cypher-dto = { path = "../lib" }
neo4rs = "0.7.1"

[dev-dependencies]
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
pretty_env_logger = "0.5.0"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = ["neo4j"] }
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ["v4"] }
