[package]
name = "cypher-dto"
description = "A collection of traits and macros for working Data Transfer Objects (DTOs) Cypher and Neo4j."
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["neo4j", "cypher", "dto", "query", "graph"]
categories = ["database"]
repository = "https://github.com/jifalops/cypher-dto"
metadata = { msrv = "1.60" }

[features]
default = ["macros"]
macros = ["cypher-dto-macros"]
serde = ["macros", "cypher-dto-macros/serde"]

[dependencies]
chrono = { version = "0.4" }
cypher-dto-macros = { version = "0.3.1", path = "../macros", optional = true }
neo4rs = "0.7.1"
thiserror = "1.0"

[dev-dependencies]
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.4", features = ["neo4j"] }
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ["v4"] }
