[package]
name = "cypher-dto-macros"
description = "The macros for cypher-dto."
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["neo4j", "cypher", "dto", "query", "graph"]
categories = ["database"]
repository = "https://github.com/jifalops/cypher-dto"

[lib]
proc-macro = true

[features]
default = []
serde = ["serde/derive"]

[dependencies]
convert_case = "0.6.0"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = "2"
